using System.Collections;
using System.Collections.Generic;
using UnityEngine;

namespace EZAssets.Scripts.Animation
{
    public enum CharacterAnimationState
    {
        Idle,
        HeadPunch,
        HeadHit,
        KidneyPunchLeft,
        KidneyPunchRight,
        KidneyHit,
        StomachPunch,
        StomachHit,
        KnockedOut
    }
}
